<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/primaryBackgroundColor"
    tools:context=".ui.fragment.customer.transaction.TransactionDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ma_giao_dich"
            android:textSize="12dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/txtTxnDetailTxnCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="12345"

            />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="@color/bgBlur"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ngay_giao_dich"
            android:textSize="12sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/txtTxnDetailTxnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textSize="12sp"
            android:text="12345"
            />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="@color/bgBlur"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/so_tien_chuyen_khoan"
            android:textSize="12sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/txtTxnDetailTxnAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textSize="12sp"
            android:text="12345"
            />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="@color/bgBlur"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noi_dung_chuyen_khoan"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txtTxnDetailTxnContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            android:text="1234sdddddddddddddddddddddddddddddđ5"
            android:textStyle="bold"
            android:minLines="1"

            />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="@color/bgBlur"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loai_giao_dich"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txtTxnDetailTxnType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            android:text="loai giao dịch là giao dịch ghhhhhhhhhhhhhhhhhhhhhửi tiền jhhjuhluh uh uhu ug gg u  ug gjhjhjhjhj"
            android:textStyle="bold"
            android:minLines="1"

            />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="@color/bgBlur"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kenh_giao_dich"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txtTxnDetailTxnChannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            android:text="kênh gưi tiên"
            android:textStyle="bold"
            android:minLines="1"

            />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="@color/bgBlur"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trang_thai_giao_dich"
            android:layout_weight="1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txtTxnDetailTxnStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            android:text="kênh gưi tiên"
            android:textStyle="bold"
            android:minLines="1"

            />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="@color/bgBlur"
        />
</LinearLayout>