<?xml version="1.0" encoding="utf-8"?> 
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="8dp"

    tools:context=".ui.form.otp.OTPFormFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/imbtOTPCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_modal_cancel" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@string/xac_thuc_giao_dich"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/vui_long_nhap_otp"
                android:textAlignment="center"
                android:textSize="16sp" />


            <LinearLayout
                android:id="@+id/OTPContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et1OTPTxn"
                    style="@style/OtpEditTextStyle"
                    android:inputType="numberPassword" />

                <EditText
                    android:id="@+id/et2OTPTxn"
                    style="@style/OtpEditTextStyle"
                    android:inputType="numberPassword" />

                <EditText
                    android:id="@+id/et3OTPTxn"
                    style="@style/OtpEditTextStyle"
                    android:inputType="numberPassword" />

                <EditText
                    android:id="@+id/et4OTPTxn"
                    style="@style/OtpEditTextStyle"
                    android:inputType="numberPassword" />

                <EditText
                    android:id="@+id/et5OTPTxn"
                    style="@style/OtpEditTextStyle"
                    android:inputType="numberPassword" />

                <EditText
                    android:id="@+id/et6OTPTxn"
                    style="@style/OtpEditTextStyle"
                    android:inputType="numberPassword" />


            </LinearLayout>

            <TextView
                android:id="@+id/txtErrorOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text=""
                android:textColor="@color/primaryColor"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/chua_nhan_otp"
                    />

                <TextView
                    android:id="@+id/txtResendOTP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/gui_lai_otp"
                    android:textColor="@color/primaryColor"
                    android:textStyle="bold" />

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVerifyOTPTransaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:background="@drawable/ripple_button"
                android:text="@string/xac_nhan"

                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null"

                app:cornerRadius="30dp"
                app:elevation="2dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>
