<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:background="@drawable/bg_main"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="116dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_backgroud"
        android:transitionName="app_logo"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="56dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#F6F5F5"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="316dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_gradient_ripple"
        android:text="@string/login"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@null" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="316dp"
        android:layout_height="45dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/btn_transparent_ripple"
        android:text="@string/new_customer"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivFlag"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_languae" />
</androidx.constraintlayout.widget.ConstraintLayout>